crates/pamoja-ffi/include/pamoja.h


typedef enum {
  PamojaStatus_Ok = 0,
  PamojaStatus_Transport = 1,
  PamojaStatus_Io = 2,
  PamojaStatus_Codec = 3,
  PamojaStatus_Closed = 4,
  PamojaStatus_Unsupported = 5,
  PamojaStatus_InvalidArgument = 6,
  PamojaStatus_Other = 7,
  PamojaStatus_Panic = 8,
  PamojaStatus_Auth = 9,
} PamojaStatus;
typedef enum {
  PamojaEdge_None = 0,
  PamojaEdge_Set = 1,
  PamojaEdge_Cleared = 2,
} PamojaEdge;
typedef struct PamojaBuffer PamojaBuffer;
typedef struct PamojaDepletion PamojaDepletion;
typedef struct PamojaDeviceIdentity PamojaDeviceIdentity;
typedef struct PamojaKalman PamojaKalman;
typedef struct PamojaPid PamojaPid;
typedef struct PamojaReadings PamojaReadings;
typedef struct PamojaSamples PamojaSamples;
typedef struct PamojaSmoother PamojaSmoother;
typedef struct PamojaThermostat PamojaThermostat;
typedef struct PamojaTrigger PamojaTrigger;
typedef struct {
  uint8_t on_low;
  uint8_t on_high;
  uint8_t off_low;
  uint8_t off_high;
} PamojaPwm;
const uint8_t *pamoja_buffer_data(const PamojaBuffer *buffer);
uintptr_t pamoja_buffer_len(const PamojaBuffer *buffer);
void pamoja_buffer_free(PamojaBuffer *buffer);
PamojaStatus pamoja_pwm_counts(PamojaPwm pwm, uint16_t *out_on, uint16_t *out_off);
PamojaStatus pamoja_codec_json_to_cbor(const uint8_t *json,
                                       uintptr_t json_len,
                                       PamojaBuffer **out_buffer);
PamojaStatus pamoja_codec_cbor_to_json(const uint8_t *cbor,
                                       uintptr_t cbor_len,
                                       PamojaBuffer **out_buffer);
PamojaStatus pamoja_codec_encode_deltas(const int64_t *samples,
                                        uintptr_t count,
                                        PamojaBuffer **out_buffer);
PamojaStatus pamoja_codec_decode_deltas(const uint8_t *bytes,
                                        uintptr_t bytes_len,
                                        PamojaSamples **out_samples);
PamojaStatus pamoja_codec_quantizer_encode(float scale,
                                           const float *readings,
                                           uintptr_t count,
                                           PamojaBuffer **out_buffer);
PamojaStatus pamoja_codec_quantizer_decode(float scale,
                                           const uint8_t *bytes,
                                           uintptr_t bytes_len,
                                           PamojaReadings **out_readings);
const int64_t *pamoja_samples_data(const PamojaSamples *samples);
uintptr_t pamoja_samples_len(const PamojaSamples *samples);
void pamoja_samples_free(PamojaSamples *samples);
const float *pamoja_readings_data(const PamojaReadings *readings);
uintptr_t pamoja_readings_len(const PamojaReadings *readings);
void pamoja_readings_free(PamojaReadings *readings);
void pamoja_smoother_free(PamojaSmoother *smoother);
void pamoja_pid_free(PamojaPid *pid);
void pamoja_trigger_free(PamojaTrigger *trigger);
PamojaTrigger *pamoja_trigger_above(float threshold, float hysteresis);
PamojaTrigger *pamoja_trigger_below(float threshold, float hysteresis);
PamojaEdge pamoja_trigger_update(PamojaTrigger *trigger, float reading);
bool pamoja_trigger_is_set(const PamojaTrigger *trigger);
float pamoja_trigger_threshold(const PamojaTrigger *trigger);
float pamoja_trigger_hysteresis(const PamojaTrigger *trigger);
bool pamoja_trigger_watches_above(const PamojaTrigger *trigger);
void pamoja_thermostat_free(PamojaThermostat *thermostat);
void pamoja_depletion_free(PamojaDepletion *depletion);
PamojaSmoother *pamoja_smoother_new(float weight);
float pamoja_smoother_update(PamojaSmoother *smoother, float sample);
bool pamoja_smoother_value(const PamojaSmoother *smoother, float *out_value);
void pamoja_smoother_reset(PamojaSmoother *smoother);
PamojaPid *pamoja_pid_new(float kp, float ki, float kd);
PamojaPid *pamoja_pid_new_with_limits(float kp, float ki, float kd, float min, float max);
float pamoja_pid_update(PamojaPid *pid, float setpoint, float measurement, float dt);
void pamoja_pid_reset(PamojaPid *pid);
PamojaThermostat *pamoja_thermostat_cooling(float setpoint, float hysteresis);
PamojaThermostat *pamoja_thermostat_heating(float setpoint, float hysteresis);
bool pamoja_thermostat_update(PamojaThermostat *thermostat, float reading);
bool pamoja_thermostat_is_on(const PamojaThermostat *thermostat);
PamojaDepletion *pamoja_depletion_new(float threshold);
bool pamoja_depletion_update(PamojaDepletion *depletion, float level, uint32_t *out_samples);
PamojaKalman *pamoja_kalman_new(float process_noise, float measurement_noise, float initial);
float pamoja_kalman_update(PamojaKalman *kalman, float reading);
PamojaDeviceIdentity *pamoja_device_identity_new(const uint8_t *seed, uintptr_t seed_len);
PamojaStatus pamoja_device_identity_public_key(const PamojaDeviceIdentity *identity,
                                               uint8_t *out_public_key);
PamojaStatus pamoja_device_identity_sign(const PamojaDeviceIdentity *identity,
                                         const uint8_t *payload,
                                         uintptr_t payload_len,
                                         uint8_t *out_signature);
PamojaStatus pamoja_device_identity_sign_message(const PamojaDeviceIdentity *identity,
                                                 const uint8_t *payload,
                                                 uintptr_t payload_len,
                                                 PamojaBuffer **out_buffer);
PamojaStatus pamoja_public_identity_verify_message(const uint8_t *public_key,
                                                   const uint8_t *message,
                                                   uintptr_t message_len,
                                                   PamojaBuffer **out_buffer);
void pamoja_device_identity_free(PamojaDeviceIdentity *identity);
PamojaStatus pamoja_public_identity_fingerprint(const uint8_t *public_key,
                                                uint8_t *out_fingerprint);
PamojaStatus pamoja_public_identity_verify(const uint8_t *public_key,
                                           const uint8_t *payload,
                                           uintptr_t payload_len,
                                           const uint8_t *signature);